Fix grid and sticky overlap, fixed grids, fixed colour issue. Need to adjust scroll function and update contents

--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -27,6 +27,7 @@ body
 .StickyBanner
 {
     visibility:hidden; 
+    z-index: 10;
 
     display: flex;
     align-items: center;
@@ -241,52 +242,61 @@ body
     font-weight: 100;
 }
 /* To define the layout style of the content inside the content section */
+.GridContainer
+{
+    display: flex;
+    justify-content: center;
+}
 .Grid
 {
     display: grid;
-    grid-template-columns: repeat(15, 1fr);
+    grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(1,1fr);
     gap: 16px;
+    /* margin:25px; */
 
     width: 100vw;
     height: 100vh;
 }
 
-.Grid-About
+.GridAbout
 {
-    grid-column: 4/13;
+    grid-column: 5/13;
     text-wrap: wrap;
+    text-align: center;
 }
 
-.Grid-Content-Description
+.GridContentDescription
 {
-    grid-column: 6/15;
+    grid-column: 7/16;
     margin: 10px;
     padding: 0px;       
 }
 
-.Grid-Content-Image
+.GridContentImage
 {
-    grid-column: 1/5;
+    grid-column: 1/7;
 }
 
-.Grid-Projects
+.GridProjects
 {
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2,1fr);
     gap: 30px;
     border-width: 2px;
 
-    width: 100vw;
+    width: 75vw;
     height: 100vh;
+
 }
 
-.Grid-Project-Item:nth-child(n)
+.GridProjectItem:nth-child(n)
 {
+    text-align: center;
     background-color: white;
     border-radius: 15px;
-    opacity: 0.2;;
+    opacity: 0.7;;
 }
 
 .AboutContent
